force-app/main/default/objects/Activity/fields/Key_Takeaways_Impact__c.field-meta.xml
<CustomField>
    <fullName>Key_Takeaways_Impact__c</fullName>
    <label>Key Takeaways/Impact</label>
    <type>TextArea</type>
</CustomField>