force-app/main/default/objects/Activity/fields/Task_Notification_1__c.field-meta.xml
<CustomField>
    <fullName>Task_Notification_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional user to be notified on this task creation.</description>
    <inlineHelpText>Additional user to be notified on this task creation.</inlineHelpText>
    <label>Task Notification 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>